src/components/Home.module.css
body {
    background-color: #282c34;
}

.name {
    text-transform: uppercase;
    font-size: 170px;
    color: #0c0c0c;
    background-image: linear-gradient(to right, transparent 50%, #bbb 50%);
    text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.8),
        0px 0px 20px rgba(255, 255, 255, 0.5),
        0px 0px 30px rgba(255, 255, 255, 0.3),
        0px 0px 40px rgba(255, 255, 255, 0.2);
    background-clip: text;
}

.jobTitle {
    color: #a1baec;
    font-size: 40px;
    margin-left: 40px;
    margin-top: -40px;
}

.pageTwo {
    background-color: #282c34;
}

.section {
    margin-top: 20%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.title {
    color: #d5d9e2;
    font-size: 80px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    text-shadow: 2px 2px 4px rgba(247, 243, 243, 0.5);
}

.workExperience {
    color: white;
    padding: 50px;
}

.workExperience h2 {
    margin-top: 20%;
    font-size: 36px;
    font-weight: bold;
    margin-bottom: 30px;
}

.card {
    display: flex;
    align-items: center;
    margin-bottom: 30px;
}

.card img {
    width: 150px;
    margin-right: 30px;
}

.card h3 {
    font-size: 24px;
    font-weight: bold;
    margin-bottom: 10px;
}

.card p {
    margin-bottom: 5px;
}

.card button {
    display: inline-block;
    margin-top: 10px;
    padding: 10px 20px;
    background-color: #555;
    color: #fff;
    text-decoration: none;
    border-radius: 5px;
}

.card button:hover {
    background-color: #333;
}

.callToAction {
    text-align: center;
    margin-top: 50px;
}

.callToAction a {
    display: inline-block;
    padding: 10px 20px;
    background-color: #555;
    color: #fff;
    text-decoration: none;
    border-radius: 5px;
}

.callToAction a:hover {
    background-color: #333;
}

.skillsContainer {
    margin-top: 20%;
    display: grid;
    margin-left: 10px;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    gap: 2rem;
    color: white;
}

.skillsList {
    list-style: none;
    padding: 0;
    margin: 0;
}

.skillsList li {
    margin-bottom: 18px;
}

.skillIcon {
    width: 50px;
    height: 50px;
    margin-bottom: 1rem;
    transition: transform 0.2s ease-in-out;
}

.skillIcon img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.skillIcon:hover {
    transform: scale(1.2);
}

.skillName {
    font-size: 1.2rem;
    font-weight: bold;
    text-align: center;
}

.educationContainer {
    color: white;
    padding: 50px;
}

.educationContainer h2 {
    margin-top: 20%;
    font-size: 36px;
    font-weight: bold;
    margin-bottom: 30px;
}

.educationInner img {
    width: 8%;
}

.courses {
    margin-top: 5%;
}

.coursesInner {
    display: flex;
    flex-wrap: wrap;
}

.course {
    width: 300px;
    height: 200px;
    margin: 10px;
    padding-bottom: 80px;
}

.course p,
.course2 p {
    font-size: 13px;
}

.projectContainer {
    margin-top: 20%;
    color: white;
}

.projectHeading {
    margin-bottom: 50px;
    font-size: 36px;
    font-weight: bold;
    margin-bottom: 30px;
}

.projectContainerInner {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
}

.project {
    position: absolute;
    width: 30%;
    margin-bottom: 50px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
    transition: all 0.3s ease-in-out;
    position: relative;
    color: white;
}

.projectSpecial:hover {
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
    transform: translateY(-10px);
}

.projectDetails {
    padding: 20px;
}

.projectTitle {
    font-size: 24px;
    margin-bottom: 10px;
}

.projectDescription {
    font-size: 16px;
    line-height: 1.5;
    margin-bottom: 20px;
}

.projectLink {
    display: block;
    background-color: #000;
    color: #fff;
    text-align: center;
    padding: 10px 20px;
    border-radius: 5px;
    text-decoration: none;
    width: 100%;
    transition: all 0.3s ease-in-out;
}

.projectLink:hover {
    background-color: #fff;
    color: #000;
    border: 1px solid #000;
}

.projectButton {
    display: inline-block;
    margin-top: 10px;
    padding: 10px 20px;
    background-color: #555;
    color: #fff;
    text-decoration: none;
    border-radius: 5px;
}

.projectButton:hover {
    background-color: #333;
}

.projectLinkButton {
    display: block;
    background-color: #000;
    color: #fff;
    text-align: center;
    padding: 10px 20px;
    border-radius: 5px;
    text-decoration: none;
    width: 90%;
    transition: all 0.3s ease-in-out;
}

.projectLinkButton:hover {
    background-color: #fff;
    color: #000;
    border: 1px solid #000;
}

.contactContainer {
    margin-top: 29%;
    color: white;
    height: 95vh;
}

.contactHeading {
    margin-bottom: 50px;
    font-size: 36px;
    font-weight: bold;
    margin-bottom: 30px;
}

.contactCard {
    position: absolute;
    width: 400px;
    margin-bottom: 50px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
    transition: all 0.3s ease-in-out;
    position: relative;
    color: white;
}

.contactCard:hover {
    box-shadow: 0 40px 100px rgba(0, 0, 0, 0.5);
    transform: translateY(-20px);
}

.tcontactTitle {
    color: grey;
    font-size: 18px;
}

.contactButton {
    border: none;
    outline: 0;
    display: inline-block;
    padding: 8px;
    color: white;
    background-color: #000;
    text-align: center;
    cursor: pointer;
    width: 100%;
    font-size: 18px;
}

.contactButton:hover {
    opacity: 0.7;
}

.cardSocialLinks {
    color: white;
}

.cardSocialLinks a {
    color: inherit;
}

.cardSocialLinks a:hover {
    color: blue;
}

.contactCardContent {
    margin-left: 1%;
}

@media screen and (max-width: 1195px) {
    .name {
        font-size: 100px;
    }
}

@media (max-width: 768px) {
    .name {
        font-size: 50px;
    }

    .cardGroup {
        flex-direction: column;
    }

    .card {
        width: 90%;
        margin-right: 0;
        margin-bottom: 2%;
    }

    .name {
        font-size: 70px;
    }

    .projectContainerInner {
        flex-direction: column;
        align-items: normal;
    }

    .project {
        width: 70%;
        margin-left: 10px;
    }
}

@media (max-width: 480px) {
    .name {
        font-size: 50px;
        margin-top: 23%;
    }

    .contactCard {
        width: 350px;
    }
}

